# TissuuMaps-Bin2Cell-Visualization-

./: .gitignore  README.md  install_bin2cell_plugin.sh  launch_tissuumaps.sh  mkdocs.yml  plugins_manifest.json  pyproject.toml  recents.json  setup_uv_bin2cell.sh  tissuumaps_server.cfg
.github/workflows/: deploy-docs.yml  docs.yml
docs/: architecture.md  design-rationale.md  developer-guide.md  guide.md  index.md  usage.md
docs/overrides/: main.html
plugins/: Bin2CellExplorer.js  Bin2CellExplorer.py  Bin2CellExplorer.yml  CellExplorer.js  CellExplorer.py  CellExplorer.yml  plugins_manifest.json
plugins/Bin2CellExplorer/: dataset_state.json
plugins/CellExplorer/: dataset_state.json
